# pet-adoption

./: README.md  docker-compose.dev.yml
backend/: .gitignore  Dockerfile  README.md  example.env  pyproject.toml
backend/scripts/: run-dev.sh
backend/src/apps/accounts/: utils.py
backend/src/apps/accounts/backends/: __init__.py  email_or_username_model_backend.py
backend/src/settings/: common.py  dev.py  example_dev.py
web/: .eslintrc.json  package-lock.json  package.json  tsconfig.json
web/src/: App.jsx  App.tsx  index.tsx
web/src/common/assets/: README.md
web/src/common/assets/styles/: _color.scss
web/src/common/components/: README.md  Routing.jsx  Routing.tsx  shortcuts.ts
web/src/common/components/location/: LocationInput.jsx  LocationInput.tsx
web/src/common/components/utils/: wrappers.js  wrappers.ts
web/src/common/config/: README.md
web/src/common/layouts/: README.md
web/src/common/middlewares/: README.md
web/src/common/pages/: Chakra.tsx  README.md
web/src/common/routes/: README.md
web/src/common/services/: README.md
web/src/common/store/: README.md
web/src/common/themes/: base.ts
web/src/common/utils/: README.md
web/src/search/components/PetCategorySearch/: PetCategorySearch.jsx  PetCategorySearch.tsx
web/src/search/components/PetCategorySelector/: PetCategorySelector.jsx  PetCategorySelector.tsx
web/src/search/components/Search/: Search.jsx  Search.tsx
