[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Ernest Kahnwald <ernestkahnwald@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.6"
djangorestframework = "^3.13.1"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.9"
ipython = "^8.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
